hphp/hack/test/typecheck/error_messages/float.php.exp
File "float.php", line 9, characters 10-15:
Invalid return type (Typing[4110])
  File "float.php", line 3, characters 17-22:
  This is a string
  File "float.php", line 9, characters 10-15:
  It is incompatible with a float because this is the result of an arithmetic operation with a float as the first argument.
  File "float.php", line 4, characters 12-14:
  Here is why I think the argument is a float: this is a float
